# apollonft-chatbot-backend

./: .gitignore  apollonft.db  pyproject.toml  test.py
app/: config.py  main.py
app/agent/: agent.py  key_rotator.py  runner.py
app/agent/tools/: __init__.py  client_tools.py  image_tools.py  knowledge_tools.py  nft_tools.py  user_tools.py
app/db/: crud.py  database.py  models.py
app/rag/: embedder.py  ingest.py  qdrant.py
app/routers/: chat.py  ipfs.py  nft.py  transcribe.py  users.py  voice.py
